--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Postdoc at NIH. Works on Machine Learning and High-performance computing applications in Biophysics"
 #  location         : "Location"
 #  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=%22samarjeet+prasad%22+or+%22fnu+samarjeet%22"
   googlescholar    : "https://scholar.google.com/citations?user=WlVDiHEAAAAJ&hl=en"
 #  email            :
 #  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
